plugins {
    id 'java'
}

group 'lt.vu.mif'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.monitorjbl', name: 'json-view', version: '1.0.1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
    compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'

    testCompile 'org.junit.jupiter:junit-jupiter-api:5.4.2'
}
